Update comments to not go down the same rabbit hole again.